--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@0xsero/open-queue",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Message queue plugin for OpenCode - control message flow with hold/immediate modes",
   "keywords": [
     "opencode",
@@ -12,6 +12,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
+    "@0xsero/open-queue": "./bin/install.js",
     "open-queue": "./bin/install.js"
   },
   "exports": {
